Rewrite huffman decoder